HOOP-8: fix issue - appNavigator covering game options dropdown menu

--- a/Dribbly.Web/wwwroot/src/shared/modules/app/app.scss
+++ b/Dribbly.Web/wwwroot/src/shared/modules/app/app.scss
@@ -34,6 +34,10 @@
     overflow-y: auto;
 }
 
+#app-navigation-container {
+    z-index: 1;
+}
+
 #page-body-container {
     min-height: 100%;
 
